--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,46 @@ body {
   font-family: FontAwesome;
   font-size: 20px;
 }
+
+/* Hero section - Avi */
+.hero1 {
+  width: 100%;
+  height: 100vh;
+  background: grey;
+}
+
+.inner-container {
+  margin: auto;
+  width: 80%;
+  height: 100%;
+  background: url(../images/61lwJy4B8PL._SX3000_.jpg) no-repeat center center/cover;
+  display: block;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.top-area {
+  padding-top: 12rem;
+  display: flex;
+  justify-content: space-around;
+}
+
+.cards-area {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5rem;
+}
+
+.card {
+  background: #fff;
+  padding: 2rem;
+  display: block;
+}
+
+.card-items {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
