--- a/css/utilities.css
+++ b/css/utilities.css
@@ -4,3 +4,18 @@
 .column {
   flex-direction: column;
 }
+.space-between {
+  justify-content: space-between;
+}
+.end {
+  align-self: flex-end;
+}
+.align-items {
+  align-items: center;
+}
+.justify-content {
+  justify-content: center;
+}
+.gap {
+  gap: 15px;
+}
