--- a/css/style.css
+++ b/css/style.css
@@ -54,13 +54,14 @@ i {
   color: aliceblue;
 }
 .search-nav {
+  display: flex;
   margin: 0 18px;
 }
 select {
   font-size: 14px;
 }
 input {
-  width: 900px;
+  width: 50vw;
 }
 .US-icon {
   height: 70%;
@@ -164,6 +165,27 @@ input {
   /* margin: 1rem; */
 }
 
+/* Lines area */
+.line {
+  display: block;
+  width: 100%;
+  background: #fff;
+}
+
+.line h2 {
+  margin: 1rem;
+  margin-top: 3rem;
+}
+
+.roller {
+  display: flex;
+}
+
+.roller img {
+  margin-left: 5rem;
+  max-width: 200px;
+  height: 100%;
+}
 /* Laptop */
 
 @media screen and (max-width: 1700px) {
