Committing local changes before merging with origin/main

--- a/css/style.css
+++ b/css/style.css
@@ -54,13 +54,27 @@ i {
   color: aliceblue;
 }
 .search-nav {
+  height: 40px;
+  width: 40vw;
   margin: 0 18px;
 }
 select {
   font-size: 14px;
+  border: none;
+  height: 100%;
+  width: 50px;
+  background-color: rgb(216, 214, 214);
+  border-radius: 10px 0 0 10px;
 }
+.search-icon {
+  width: 45px;
+  height: 40px;
+  background-color: orange;
+}
+
 input {
-  width: 900px;
+  height: 100%;
+  width: 40vw;
 }
 .US-icon {
   height: 70%;
@@ -82,12 +96,12 @@ input {
   margin: auto;
   width: 80%;
   height: 100%;
-  background: url(../images/61lwJy4B8PL._SX3000_.jpg) no-repeat center center/cover;
+  background: url(../images/61lwJy4B8PL._SX3000_.jpg) no-repeat center
+    center/cover;
   display: block;
   justify-content: center;
   align-items: center;
   z-index: 1;
-  
 }
 
 .top-area {
@@ -167,7 +181,7 @@ input {
 /* Laptop */
 
 @media screen and (max-width: 1700px) {
-.inner-container {
-  width: 100%;
-}
+  .inner-container {
+    width: 100%;
+  }
 }
