--- a/css/style.css
+++ b/css/style.css
@@ -5,84 +5,106 @@
 }
 body {
   font-size: 14px;
-  line-height: 20px;
+  /* line-height: 20px; */
   font-family: Arial, sans-serif;
 }
+
 .header-container {
   color: white;
-  min-width: 1000px;
-  height: 100px;
+  /* min-width: 1000px; */
+  /* height: 100px; */
   font-family: inherit;
-  font-size: 12px;
-  line-height: 1em;
-  align-items: baseline;
+  font-size: 1.3rem;
+  line-height: 1.2em;
 }
+
 .nav-logobar {
   width: 100%;
-  height: 50px;
-  padding: 3px 3px 3px 3px;
+  height: 8.5vh;
+  padding: 3px 10px;
   background-color: #131921;
-  padding-left: 20px;
-  padding-right: 20px;
+  /* padding: 3px; */
+  align-items: center;
+
   /* border-bottom: 1px solid #232f3e; */
   /* background-color: #232f3e; */
 }
-.data {
-  width: 100%;
+.logo {
+  height: 65%;
+  width: auto;
+  margin: 7px 5px;
+}
+
+.location-icon {
+  width: 18px;
   height: 25px;
-  font-size: 10px;
-  color: #0f1111;
-  background-color: #d8f7eb;
-  padding-left: 20px;
+  margin: 15px 3px 0 3px;
+}
+.p-secondery {
+  color: #cccccc;
+  font-size: 1.1rem;
+}
+.p-content {
+  font-size: 1.1rem;
+}
+
+.search-nav {
+  height: 5.5vh;
+}
+
+select {
+  color: #959494;
+  font-size: 12px;
+  border: none;
+  width: auto;
+  background-color: #e6e6e6;
+  border-radius: 5px 0 0 5px;
+}
+
+.serch-input {
+  width: 55vw;
+  border: none;
+  padding-left: 5px;
+}
+.search-icon {
+  font-size: 2rem;
+  color: black;
+  padding: 1.2rem;
+  background-color: rgb(251, 197, 97);
+  border-radius: 0px 4px 4px 0;
+}
+
+.US-flug {
+  height: 2rem;
+  width: auto;
+  padding: 2px;
+}
+.shevron-icon {
+  margin: 5px 2px 0 2px;
+  height: 0.9rem;
 }
 
 .nav-bar {
-  width: 100%;
-  height: 30px;
+  width: 100vw;
+  height: 6vh;
   padding-left: 20px;
   background-color: #232f3e;
 }
-.logo {
-  height: 80%;
-  width: auto;
-  margin: 5px 2px 0px;
-  padding: 4px 2px 0 0;
-}
-i {
-  width: 15px;
-  height: auto;
-  color: aliceblue;
-}
-.search-nav {
-  height: 40px;
-  width: 40vw;
-  margin: 0 18px;
-}
-select {
-  font-size: 14px;
-  border: none;
-  height: 100%;
-  width: 50px;
-  background-color: rgb(216, 214, 214);
-  border-radius: 10px 0 0 10px;
-}
-.search-icon {
-  width: 45px;
-  height: 40px;
-  background-color: orange;
+.nav-bar > p {
+  font-weight: bold;
 }
 
-input {
-  height: 100%;
-  width: 40vw;
-}
-.US-icon {
-  height: 70%;
-  width: auto;
-}
 .cart-img {
   height: 60%;
   width: auto;
+  margin-bottom: 3px;
+}
+
+.data {
+  height: 4vh;
+  color: #0f1111;
+  background-color: #d8f7eb;
+  padding-left: 20px;
 }
 
 /* Hero section - Avi */
@@ -106,19 +128,41 @@ input {
 
 .top-area {
   position: relative;
+  width: 100%;
   padding-top: 12rem;
   display: flex;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   z-index: 2;
 }
 
-.top-area i {
-  position: absolute;
+/* I changed it for both side, take a look and Design it however you like :) */
+.chevron-left {
+  position: relative;
+  left: 25px;
+  font-size: 50px;
   color: black;
   height: 30px;
   width: 30px;
   z-index: 3;
 }
+
+.chevron-right {
+  position: absolute;
+  right: 25px;
+  font-size: 50px;
+  color: black;
+  height: 30px;
+  width: 30px;
+  z-index: 3;
+}
+
+/* .top-area i {
+  position: absolute;
+  color: black;
+  height: 30px;
+  width: 30px;
+  z-index: 3;
+} */
 
 .cards-area {
   width: 100%;
@@ -178,6 +222,27 @@ input {
   /* margin: 1rem; */
 }
 
+/* Lines area */
+.line {
+  display: block;
+  width: 100%;
+  background: #fff;
+}
+
+.line h2 {
+  margin: 1rem;
+  margin-top: 3rem;
+}
+
+.roller {
+  display: flex;
+}
+
+.roller img {
+  margin-left: 5rem;
+  max-width: 200px;
+  height: 100%;
+}
 /* Laptop */
 
 @media screen and (max-width: 1700px) {
