--- a/css/style.css
+++ b/css/style.css
@@ -49,12 +49,9 @@ body {
 }
 
 .search-nav {
-
   height: 5.5vh;
-
-
 }
-
+/*  */
 select {
   color: #959494;
   font-size: 12px;
@@ -69,7 +66,6 @@ select {
   border: none;
   padding-left: 5px;
 }
-
 .search-icon {
   font-size: 2rem;
   color: black;
@@ -77,7 +73,6 @@ select {
   background-color: rgb(251, 197, 97);
   border-radius: 0px 4px 4px 0;
 }
-
 
 .US-flug {
   height: 2rem;
