--- a/css/style.css
+++ b/css/style.css
@@ -4,30 +4,24 @@
   margin: 0;
 }
 body {
-  font-size: 14px;
-  /* line-height: 20px; */
+  /* font-size: 14px; */
+  font-size: 1.2rem;
   font-family: Arial, sans-serif;
 }
 
 .header-container {
   color: white;
-  /* min-width: 1000px; */
-  /* height: 100px; */
   font-family: inherit;
-  font-size: 1.3rem;
-  line-height: 1.2em;
+  font-size: 0.7rem;
+  line-height: 0.9rem;
 }
 
 .nav-logobar {
-  width: 100%;
+  width: 100;
   height: 8.5vh;
   padding: 3px 10px;
   background-color: #131921;
-  /* padding: 3px; */
   align-items: center;
-
-  /* border-bottom: 1px solid #232f3e; */
-  /* background-color: #232f3e; */
 }
 .logo {
   height: 65%;
@@ -42,16 +36,16 @@ body {
 }
 .p-secondery {
   color: #cccccc;
-  font-size: 1.1rem;
+  font-size: 0.8rem;
 }
 .p-content {
-  font-size: 1.1rem;
+  font-size: 0.7rem;
 }
 
 .search-nav {
   height: 5.5vh;
 }
-/*  */
+
 select {
   color: #959494;
   font-size: 12px;
@@ -75,13 +69,13 @@ select {
 }
 
 .US-flug {
-  height: 2rem;
+  height: 1.5rem;
   width: auto;
   padding: 2px;
 }
 .shevron-icon {
   margin: 5px 2px 0 2px;
-  height: 0.9rem;
+  height: 0.5rem;
 }
 
 .nav-bar {
@@ -91,6 +85,7 @@ select {
   background-color: #232f3e;
 }
 .nav-bar > p {
+  font-size: 0.9rem;
   font-weight: bold;
 }
 
