--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
   /* font-size: 14px; */
   font-size: 1.2rem;
   font-family: Arial, sans-serif;
+  background: #dedede;
 }
 
 .header-container {
@@ -17,7 +18,7 @@ body {
 }
 
 .nav-logobar {
-  width: 100;
+  width: 100%;
   height: 8.5vh;
   padding: 3px 10px;
   background-color: #131921;
@@ -34,7 +35,7 @@ body {
   height: 25px;
   margin: 15px 3px 0 3px;
 }
-.p-secondery {
+.p-secondary {
   color: #cccccc;
   font-size: 0.8rem;
 }
@@ -55,7 +56,7 @@ select {
   border-radius: 5px 0 0 5px;
 }
 
-.serch-input {
+.search-input {
   width: 55vw;
   border: none;
   padding-left: 5px;
@@ -79,7 +80,7 @@ select {
 }
 
 .nav-bar {
-  width: 100vw;
+  width: 100%;
   height: 6vh;
   padding-left: 20px;
   background-color: #232f3e;
@@ -104,9 +105,10 @@ select {
 
 /* Hero section - Avi */
 .hero1 {
-  width: 100%;
+  width: 98%;
+  margin: auto;
   height: 100vh;
-  background: grey;
+  background: #bababa;
 }
 
 .inner-container {
@@ -121,17 +123,27 @@ select {
   z-index: 1;
 }
 
+.fade { 
+  position: absolute; 
+  bottom: -150px; 
+  width: 100%; 
+  height: 350px; 
+  z-index: 2; 
+  background: rgba(255, 255, 255, 0) linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #dedede 80%) repeat scroll 0 0;  
+}
+
 .top-area {
   position: relative;
   width: 100%;
   padding-top: 12rem;
   display: flex;
-  /* justify-content: space-around; */
+  justify-content: space-between;
+  padding: 5rem;
   z-index: 2;
 }
 
 /* I changed it for both side, take a look and Design it however you like :) */
-.chevron-left {
+/* .chevron-left {
   position: relative;
   left: 25px;
   font-size: 50px;
@@ -149,7 +161,7 @@ select {
   height: 30px;
   width: 30px;
   z-index: 3;
-}
+} */
 
 /* .top-area i {
   position: absolute;
@@ -161,10 +173,11 @@ select {
 
 .cards-area {
   width: 100%;
+  padding: 0 2rem;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin-top: 10rem;
+  z-index: 3;
 }
 
 .card {
@@ -173,9 +186,10 @@ select {
   background: #fff;
   display: flex;
   flex-direction: column;
-  margin-right: 2rem;
+  margin-right: 1rem;
   height: 60vh;
   width: 25%;
+  z-index: 4;
 }
 
 .see {
@@ -186,8 +200,8 @@ select {
   padding: 0.5rem;
 }
 
-.card1 {
-  margin: 0 2rem;
+.card4 {
+  margin-right: 0;
 }
 
 .card-items {
@@ -222,6 +236,8 @@ select {
   display: block;
   width: 100%;
   background: #fff;
+  margin: 0 2rem;
+  overflow: scroll;
 }
 
 .line h2 {
@@ -238,27 +254,7 @@ select {
   max-width: 200px;
   height: 100%;
 }
-/* Lines area */
-.line {
-  display: block;
-  width: 100%;
-  background: #fff;
-}
 
-.line h2 {
-  margin: 1rem;
-  margin-top: 3rem;
-}
-
-.roller {
-  display: flex;
-}
-
-.roller img {
-  margin-left: 5rem;
-  max-width: 200px;
-  height: 100%;
-}
 /* Laptop */
 
 @media screen and (max-width: 1700px) {
