--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ select {
   padding-left: 20px;
   background-color: #232f3e;
 }
+
 .nav-bar > p {
   font-size: 0.9rem;
   font-weight: bold;
@@ -123,13 +124,15 @@ select {
   z-index: 1;
 }
 
-.fade { 
-  position: absolute; 
-  bottom: -150px; 
-  width: 100%; 
-  height: 350px; 
-  z-index: 2; 
-  background: rgba(255, 255, 255, 0) linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #dedede 80%) repeat scroll 0 0;  
+.fade {
+  position: absolute;
+  bottom: -150px;
+  width: 100%;
+  height: 350px;
+  z-index: 2;
+  background: rgba(255, 255, 255, 0)
+    linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #dedede 80%) repeat
+    scroll 0 0;
 }
 
 .top-area {
@@ -253,6 +256,67 @@ select {
   margin-left: 5rem;
   max-width: 200px;
   height: 100%;
+}
+/* footer */
+.back-to-top {
+  width: 100%;
+  height: 7vh;
+  padding-left: 20px;
+  margin-top: 2.5rem;
+  color: white;
+  cursor: pointer;
+  border: none;
+  background-color: #37475a;
+}
+.back-to-top:hover {
+  opacity: 0.9;
+}
+footer {
+  color: #dedede;
+}
+.footer-navbar-container {
+  background-color: #232f3e;
+}
+.footer-navbar {
+  display: grid;
+  width: 75vw;
+  height: auto;
+  margin: auto;
+  grid-template-columns: repeat(4, 1fr);
+  line-height: 1.8rem;
+}
+.footer-navbar-section {
+  padding: 2rem;
+}
+.p-heading-nav-footer {
+  font-size: 1rem;
+  font-weight: bold;
+  padding-bottom: 0.5rem;
+}
+.p-content-footer {
+  font-size: 0.85rem;
+}
+hr {
+  opacity: 0.1;
+}
+.change-language-container {
+  height: 20vh;
+}
+.change-language {
+  display: grid;
+  width: 50vw;
+  height: auto;
+  margin: auto;
+  margin-top: 2rem;
+  grid-template-columns: repeat(4, 1fr);
+  line-height: 1.8rem;
+  /* line-height: 0.9rem; */
+}
+.change-language-item {
+  width: 150px;
+  height: 35px;
+  border: 1px solid rgba(139, 137, 137, 0.5);
+  padding: 4px 0 4px 10px;
 }
 
 /* Laptop */
