--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
   font-size: 1.2rem;
   font-family: Arial, sans-serif;
   background: #dedede;
+  margin: 0;
 }
 
 .header-container {
@@ -31,7 +32,7 @@ body {
 }
 
 .location-icon {
-  width: 18px;
+  width: 2rem;
   height: 25px;
   margin: 15px 3px 0 3px;
 }
@@ -71,7 +72,7 @@ select {
 
 .US-flug {
   height: 1.5rem;
-  width: auto;
+  width: 2rem;
   padding: 2px;
 }
 .shevron-icon {
@@ -93,7 +94,7 @@ select {
 
 .cart-img {
   height: 60%;
-  width: auto;
+  width: 2rem;
   margin-bottom: 3px;
 }
 
@@ -108,7 +109,7 @@ select {
 .hero1 {
   width: 98%;
   margin: auto;
-  height: 100vh;
+  height: 100%;
   background: #bababa;
 }
 
@@ -126,9 +127,9 @@ select {
 
 .fade {
   position: absolute;
-  bottom: -150px;
+  bottom: -100px;
   width: 100%;
-  height: 350px;
+  height: 300px;
   z-index: 2;
   background: rgba(255, 255, 255, 0)
     linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #dedede 80%) repeat
@@ -235,29 +236,43 @@ select {
 }
 
 /* Lines area */
-.line {
-  display: block;
+
+.inner-line {
   width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+}
+
+
+.line {
+  box-sizing: border-box;
+  display: block;
+  width: 94%;
+  height: 100%;
   background: #fff;
-  /* margin: 0 2rem; */
+  margin: auto;
+  margin-bottom: 1rem;
+  padding: 1rem;
 }
 
 .line h2 {
   margin: 1rem;
-  margin-top: 3rem;
 }
 
 .roller {
+  box-sizing: border-box;
+  width: 100%;
   display: flex;
-  overflow: auto;
+  overflow-x: auto;
   white-space: nowrap;
-}
+} 
 
 .roller img {
   margin-left: 5rem;
   max-width: 200px;
   height: 100%;
 }
+
 /* footer */
 .back-to-top {
   width: 100%;
